# esp32-s3-ili9341-wokwi

./: .gitpod.Dockerfile  Cargo.toml  diagram.json  wokwi.toml
.devcontainer/: devcontainer.json
assets/: logo.tga
docs/: README.md
mipidsi/src/models/: ili934x.rs
scripts/: flash.sh  run-wokwi.sh
src/: main.rs
