[package]
name = "esp32_s3_with_ili9341"
version = "0.1.0"
authors = ["FMFigueroa <felixmanuelfigueroa@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32s3-hal", version = "0.7.0" }
esp-backtrace = { version = "0.5.0", features = ["esp32s3", "panic-handler", "print-uart"] }
esp-println       = { version = "0.3.1", features = ["esp32s3"] }
esp-alloc = { version = "0.2.0", features = ["oom-handler"] }
#===================         Display TFT ILI9341  SPI          =====================#
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1" #https://docs.rs/embedded-graphics/latest/embedded_graphics/index.html
mipidsi = "0.6.0" #https://github.com/almindor/mipidsi
